[project]
name = "random"
package-mode = false
version = "0.1.0"
description = "fastapi templates"
authors = [
    {name = "Cris-aian Vergara",email = "crisaianvergara@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard] (>=0.116.2,<0.117.0)",
    "fastapi-users[oauth,sqlalchemy] (>=14.0.1,<15.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "alembic (>=1.16.5,<2.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "sqlmodel (>=0.0.25,<0.0.26)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
